ags (3.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing include in ags_xml_authentication.c and minor improvements

ags (3.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential division by zero in ags_filter_util.c

ags (3.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_audio_signal_clear()
	* fixed missing clear during synth generator compute

ags (3.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSF2Generator
	* implemented AgsSFZGenerator
	* implemented AgsAudioContainerManager and AgsAudioFileManager
	* implemented pingpong copy in ags_audio_buffer_util.c
	* implemented ags_sf2_synth_util.c
	* implemented ags_sfz_synth_util.c
	* extended AgsFFPlayer
	* extended AgsPitchSampler
	* improved ags_filter_util.c
	* improved AgsComplex support
	* added unit-tests

ags (3.3.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-ladspa missing input port connected
	* fixed ags-fx-lv2 wrong copy mode

ags (3.3.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-playback capture wrong offset as clearing while replacing mode

ags (3.3.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added ags-fx-volume to AgsPanel
	* improved automation editor to handle specifier equals NULL

ags (3.3.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing automation ports of ags-fx-volume

ags (3.3.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing include string.h in ags_math_util.c

ags (3.3.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved GLib-2.0 compatibility of AgsServer

ags (3.3.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-playback 2 wrong if conditions

ags (3.3.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]